--- a/.github/workflows/update_hosts.yml
+++ b/.github/workflows/update_hosts.yml
@@ -6,7 +6,7 @@ concurrency:
 
 on:
   schedule:
-    - cron: "* */1 * * *"
+    - cron: "0 4,10,16,22 * * *"  # 每6小时运行一次（北京时间 12:00, 18:00, 00:00, 06:00）
   workflow_dispatch:
     inputs:
       DUAL_STACK:
